--- a/css/estilos.css
+++ b/css/estilos.css
@@ -174,7 +174,7 @@ header {
     width: 30%;
     height: 350px;
     margin: 0% 1%;
-    background-image: url(/images/favicon0.png);
+    background-image: url('/images/favicon0.png');
     opacity: 0.7;
     background-repeat: no-repeat;
     background-size: 350px 350px;
@@ -211,7 +211,7 @@ header {
     width: 30%;
     height: 350px;
     margin: 0% 1%;
-    background-image: url(/images/weather.png);
+    background-image: url('/images/weather.png');
     opacity: 0.7;
     background-repeat: no-repeat;
     background-size: 400px 350px;
@@ -248,7 +248,7 @@ header {
     width: 30%;
     height: 350px;
     margin: 0% 1%;
-    background-image: url(/images/presupuesto.jpg);
+    background-image: url('/images/presupuesto.jpg');
     opacity: 0.7;
     background-repeat: no-repeat;
     background-size: 400px 350px;
@@ -285,7 +285,7 @@ header {
     width: 30%;
     height: 350px;
     margin: 0% 1%;
-    background-image: url(/images/agendar_citas_medicas.jpg);
+    background-image: url('/images/agendar_citas_medicas.jpg');
     background-repeat: no-repeat;
     background-size: 350px 350px;
     background-color: rgb(176, 196, 182);
@@ -321,7 +321,7 @@ header {
     width: 30%;
     height: 350px;
     margin: 0% 1%;
-    background-image: url(/images/guantes-box.jpg);
+    background-image: url('/images/guantes-box.jpg');
     background-repeat: no-repeat;
     background-size: 350px 350px;
     background-color: rgb(176, 196, 182);
@@ -357,7 +357,7 @@ header {
     width: 30%;
     height: 350px;
     margin: 0% 1%;
-    background-image: url(/images/Mi\ Logo\ 2.JPG);
+    background-image: url('/images/Mi\ Logo\ 2.JPG');
     background-repeat: no-repeat;
     background-size: 350px 350px;
     background-color: rgb(176, 196, 182);
@@ -569,7 +569,7 @@ header {
         width: 30%;
         height: 350px;
         margin: 0% 1%;
-        background-image: url(/images/favicon0.png);
+        background-image: url('/images/favicon0.png');
         opacity: 0.7;
         background-repeat: no-repeat;
         background-size: 350px 350px;
@@ -601,7 +601,7 @@ header {
         width: 30%;
         height: 350px;
         margin: 0% 1%;
-        background-image: url(/images/weather.png);
+        background-image: url('/images/weather.png');
         opacity: 0.7;
         background-repeat: no-repeat;
         background-size: 400px 350px;
@@ -633,7 +633,7 @@ header {
         width: 30%;
         height: 350px;
         margin: 0% 1%;
-        background-image: url(/images/presupuesto.jpg);
+        background-image: url('/images/presupuesto.jpg');
         opacity: 0.7;
         background-repeat: no-repeat;
         background-size: 400px 350px;
@@ -665,7 +665,7 @@ header {
         width: 30%;
         height: 350px;
         margin: 0% 1%;
-        background-image: url(/images/agendar_citas_medicas.jpg);
+        background-image: url('/images/agendar_citas_medicas.jpg');
         background-repeat: no-repeat;
         background-size: 350px 350px;
         background-color: rgb(176, 196, 182);
@@ -696,7 +696,7 @@ header {
         width: 30%;
         height: 350px;
         margin: 0% 1%;
-        background-image: url(/images/guantes-box.jpg);
+        background-image: url('/images/guantes-box.jpg');
         background-repeat: no-repeat;
         background-size: 350px 350px;
         background-color: rgb(176, 196, 182);
@@ -727,7 +727,7 @@ header {
         width: 30%;
         height: 350px;
         margin: 0% 1%;
-        background-image: url(/images/Mi\ Logo\ 2.JPG);
+        background-image: url('/images/Mi\ Logo\ 2.JPG');
         background-repeat: no-repeat;
         background-size: 350px 350px;
         background-color: rgb(176, 196, 182);
@@ -931,7 +931,7 @@ header {
         height: 350px;
         margin: 0% 1% 10% 0;
         padding: 1%;
-        background-image: url(/images/favicon0.png);
+        background-image: url('/images/favicon0.png');
         opacity: 0.7;
         background-repeat: no-repeat;
         background-size: 393px 390px;
@@ -964,7 +964,7 @@ header {
         height: 350px;
         margin: 0% 1% 10% 0%;
         padding: 1%;
-        background-image: url(/images/weather.png);
+        background-image: url('/images/weather.png');
         opacity: 0.7;
         background-repeat: no-repeat;
         background-size: 393px 390px;
@@ -997,7 +997,7 @@ header {
         height: 350px;
         margin: 0% 1% 10% 0%;
         padding: 1%;
-        background-image: url(/images/presupuesto.jpg);
+        background-image: url('/images/presupuesto.jpg');
         opacity: 0.7;
         background-repeat: no-repeat;
         background-size: 393px 390px;
@@ -1029,7 +1029,7 @@ header {
         width: 100%;
         height: 350px;
         margin: 0% 1% 10% 0%;
-        background-image: url(/images/agendar_citas_medicas.jpg);
+        background-image: url('/images/agendar_citas_medicas.jpg');
         background-repeat: no-repeat;
         background-size: 393px 390px;
         background-color: rgb(176, 196, 182);
@@ -1061,7 +1061,7 @@ header {
         height: 350px;
         margin: 0% 1% 10% 0%;
         padding: 1%;
-        background-image: url(/images/guantes-box.jpg);
+        background-image: url('/images/guantes-box.jpg');
         background-repeat: no-repeat;
         background-size: 393px 390px;
         background-color: rgb(176, 196, 182);
@@ -1093,7 +1093,7 @@ header {
         height: 350px;
         margin: 0% 1% 10% 0%;
         padding: 1%;
-        background-image: url(/images/Mi\ Logo\ 2.JPG);
+        background-image: url('/images/Mi\ Logo\ 2.JPG');
         background-repeat: no-repeat;
         background-size: 393px 390px;
         background-color: rgb(176, 196, 182);
@@ -1296,7 +1296,7 @@ header {
         width: 100%;
         height: 250px;
         margin: 0% 1% 10% 0;
-        background-image: url(/images/favicon0.png);
+        background-image: url('/images/favicon0.png');
         opacity: 0.7;
         background-repeat: no-repeat;
         background-size: 255px 250px;
@@ -1328,7 +1328,7 @@ header {
         width: 100%;
         height: 250px;
         margin: 0% 1% 10% 0%;
-        background-image: url(/images/weather.png);
+        background-image: url('/images/weather.png');
         opacity: 0.7;
         background-repeat: no-repeat;
         background-size: 255px 550px;
@@ -1360,7 +1360,7 @@ header {
         width: 100%;
         height: 250px;
         margin: 0% 1% 10% 0%;
-        background-image: url(/images/presupuesto.jpg);
+        background-image: url('/images/presupuesto.jpg');
         opacity: 0.7;
         background-repeat: no-repeat;
         background-size: 255px 250px;
@@ -1392,7 +1392,7 @@ header {
         width: 100%;
         height: 250px;
         margin: 0% 1% 10% 0%;
-        background-image: url(/images/agendar_citas_medicas.jpg);
+        background-image: url('/images/agendar_citas_medicas.jpg');
         background-repeat: no-repeat;
         background-size: 255px 250px;
         background-color: rgb(176, 196, 182);
@@ -1423,7 +1423,7 @@ header {
         width: 100%;
         height: 250px;
         margin: 0% 1% 10% 0%;
-        background-image: url(/images/guantes-box.jpg);
+        background-image: url('/images/guantes-box.jpg');
         background-repeat: no-repeat;
         background-size: 255px 250px;
         background-color: rgb(176, 196, 182);
@@ -1454,7 +1454,7 @@ header {
         width: 100%;
         height: 250px;
         margin: 0% 1% 10% 0%;
-        background-image: url(/images/Mi\ Logo\ 2.JPG);
+        background-image: url('/images/Mi\ Logo\ 2.JPG');
         background-repeat: no-repeat;
         background-size: 255px 250px;
         background-color: rgb(176, 196, 182);
